lower-header/uppder-footer: correcting alignment, margin, padding, colour issues fixes: #563

--- a/adhocracy-plus/assets/scss/components/_footer.scss
+++ b/adhocracy-plus/assets/scss/components/_footer.scss
@@ -30,9 +30,15 @@
     font-size: $font-size-md;
 }
 
+.footer-upper__text {
+    font-weight: $demi-bold;
+    color: $gray-lighter;
+}
+
 .footer-upper__nav-link {
     display: inline;
     text-decoration-line: none;
+    color: $gray-lighter;
 
     &:hover {
         color: $brand-primary;
